tests/error/array_cast_err.gw
#! [contains] no match found for operator
<<< [ 1 ] $ int[][] >>>;
